--- a/RSIWebSiteQA/packages.config
+++ b/RSIWebSiteQA/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ExtentReports" version="2.41.0" targetFramework="net45" />
   <package id="NUnit" version="3.2.1" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.0.10" targetFramework="net45" />
   <package id="Selenium.Support" version="2.53.0" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.53.0" targetFramework="net45" />
 </packages>
