Simplification/Refactoring after code review

--- a/RSIWebSiteQA/Configurations/Environment.config
+++ b/RSIWebSiteQA/Configurations/Environment.config
@@ -2,6 +2,6 @@
 <appSettings>
   <add key="URL" value="http://www.ruralsourcing.com"/>
   <!--<add key="TestDataSheetPath" value="\\mobdatw01\users\rick.johnson\documents\visual studio 2013\Projects\OnlineStore\OnlineStore\TestDataAccess\TestData.xlsx" />-->
-  <add key="LogDirectory" value="\\mobdatw01\users\rick.johnson\Documents\Projects\Selenium\Logs"/>
+  <add key="LogDirectory" value="\\mobdatw01\users\rick.johnson\Documents\Projects\RSIWebSiteQA\Logs"/>
   <add key="LogPrefix" value="RSIWebSiteTest"/>
 </appSettings>
