--- a/RSIWebSiteQA/RSIWebSiteQA.csproj
+++ b/RSIWebSiteQA/RSIWebSiteQA.csproj
@@ -73,6 +73,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogReportAssert.cs" />
     <Compile Include="PageObjects\0-WhatWeDo\ApplicationManagementPage.cs" />
     <Compile Include="PageObjects\0-WhatWeDo\BIAnalyticsPage.cs" />
     <Compile Include="PageObjects\0-WhatWeDo\QualityAssurancePage.cs" />
@@ -108,12 +109,15 @@
     <Compile Include="PageObjects\1-SmarterOutsourcing\SmarterOutsourcingFAQPage.cs" />
     <Compile Include="PageObjects\1-SmarterOutsourcing\SmarterOutsourcingWhatToExpectPage.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Reporting.cs" />
     <Compile Include="TestCases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextLogging\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Configurations\Environment.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
