Added ExtentReport to test and logging classes, added report logging with asserts

--- a/RSIWebSiteQA/Configurations/Environment.config
+++ b/RSIWebSiteQA/Configurations/Environment.config
@@ -3,5 +3,6 @@
   <add key="URL" value="http://www.ruralsourcing.com"/>
   <!--<add key="TestDataSheetPath" value="\\mobdatw01\users\rick.johnson\documents\visual studio 2013\Projects\OnlineStore\OnlineStore\TestDataAccess\TestData.xlsx" />-->
   <add key="LogDirectory" value="\\mobdatw01\users\rick.johnson\Documents\Projects\RSIWebSiteQA\Logs"/>
+  <add key="ReportDirectory" value="\\mobdatw01\users\rick.johnson\Documents\Projects\RSIWebSiteQA\Reports"/>
   <add key="LogPrefix" value="RSIWebSiteTest"/>
 </appSettings>
